# agent_factory

./: README.md  agent_factory_merged.md  game_dev_sandbox_config.yaml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci-gate.yml
agent_factory/api/: checkpoints.py  main.py  ws.py
agent_factory/ci/: bootstrap_startup_guard.py  branch_protection_guard.py  pr_doc_impact_gate.py  run_gates.py
agent_factory/config/: settings.py
agent_factory/core/: __init__.py  factory_graph.py  nodes.py  state.py
agent_factory/cost/: controller.py  estimator.py
agent_factory/delivery/: contract_validator.py  language_aware_packager.py  packager.py  tutorial_generator.py
agent_factory/development/: graph.py  nodes.py
agent_factory/discussion/: bulletin_board.py  parallel_graph.py  synthesis.py  token_budget.py
agent_factory/dispatcher/: feedback_scorer.py  feedback_store.py  master_dispatcher.py
agent_factory/engine/: mcp_pool.py  skill_registry.py  tool_capability_index.py  tool_descriptor.py  tool_executor.py  (+3 more)
docs/: FEATURE_PROGRESS.md
governance/: bootstrap_context.yaml  bootstrap_startup_evidence.yaml  branch_protection_evidence.yaml  doc_code_map.yaml
output/: dispatch_outcomes.jsonl
selftests/: ci_bootstrap.selftest.yaml  main_flow_bootstrap.selftest.yaml  main_flow_launch_e2e.selftest.yaml  main_flow_real_test_stabilization.selftest.yaml  main_flow_step_logging.selftest.yaml  main_flow_tool_plan.selftest.yaml
tests/: test_api_launch_flow.py  test_domain_router.py  test_main_flow_tool_plan_integration.py  test_tool_planning.py
(+53 files in other folders)
